@startuml
left to right direction
package "taskt.Core.Automation.Commands"{
class "SetWindowsStateCommand" <<sealed>> {
+RunCommand() : void 
+v_WindowState : String <<get>> <<set>> 
}
}

package "taskt.Core.Automation.Commands"{
abstract class "AWindowNamesActionCommnads"{
+v_WaitTimeBetweenFindAndAction : String <<get>> <<set>> 
+v_ActivateBeforeAction : String <<get>> <<set>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IWindowStateProperties" {
+{abstract} v_WindowState : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
abstract class "AWindowNamesCommands"{
+v_WindowNameResult : String <<get>> <<set>> 
+v_WindowHandleResult : String <<get>> <<set>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IWindowNamesActionProperties" {
}
}

package "taskt.Core.Automation.Commands"{
Interface "IExpandableProperties" {
}
}

package "taskt.Core.Automation.Commands"{
abstract class "AWindowNameCoreCommands"{
+Refresh() : void 
+v_WindowName : String <<get>> <<set>> 
+v_CheckMethod : String <<get>> <<set>> 
+v_WaitTimeForWindow : String <<get>> <<set>> 
+v_WindowNameResult : String <<get>> <<set>> 
+v_WindowHandleResult : String <<get>> <<set>> 
+v_CaseSensitive : String <<get>> <<set>> 
+v_TrimBeforeCheck : String <<get>> <<set>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IWindowNamesProperties" {
}
}

package "taskt.Core.Automation.Commands"{
Interface "ICanHandleList" {
}
}

package "taskt.Core.Automation.Commands"{
Interface "IWindowWaitTimeBetweenFindAndActionProperties" {
+{abstract} v_WaitTimeBetweenFindAndAction : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IWindowActivateProperties" {
+{abstract} v_ActivateBeforeAction : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
abstract class "ScriptCommand"{
+RunCommand() : void 
+RunCommand() : void 
+GetDisplayValue() : String
+Render() : List
+Render() : List
+AfterShown() : void 
+Refresh() : void 
+BeforeValidate() : void 
+IsValidate() : Boolean
+ConvertToIntermediate() : void 
+ConvertToIntermediate() : void 
+ConvertToRaw() : void 
+ConvertToRaw() : void 
+Clone() : ScriptCommand
+CheckMatched() : Boolean
+Replace() : Boolean
+AddInstance() : void 
+RemoveInstance() : void 
+CommandID : String <<get>> <<set>> 
+CommandName : String <<get>> <<set>> 
+IsCommented : Boolean <<get>> <<set>> 
+SelectionName : String <<get>> <<set>> 
+DefaultPause : Int32 <<get>> <<set>> 
+LineNumber : Int32 <<get>> <<set>> 
+PauseBeforeExeucution : Boolean <<get>> <<set>> 
+DisplayForeColor : Color <<get>> <<set>> 
+v_Comment : String <<get>> <<set>> 
+CommandEnabled : Boolean <<get>> <<set>> 
+IsValid : Boolean <<get>> <<protected set>>
+IsWarning : Boolean <<get>> <<protected set>>
+validationResult : String <<get>> <<protected set>>
+IsMatched : Boolean <<get>> <<protected set>>
+IsDontSavedCommand : Boolean <<get>> <<set>> 
+IsNewInsertedCommand : Boolean <<get>> <<set>> 
+CustomRendering : Boolean <<get>> <<set>> 
+ControlsList : Dictionary <<get>> 
+RenderedControls : List<System.Windows.Forms.Control>
#_ControlsList : Dictionary<string, System.Windows.Forms.Control>
}
}

package "taskt.Core.Automation.Commands"{
Interface "IWindowNameCoreProperties" {
+{abstract} v_WindowName : String <<get>> <<set>> <<abstract>> 
+{abstract} v_WaitTimeForWindow : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IUIParameterProperties" {
+{abstract} ControlsList : Dictionary <<get>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "ICommandIDProperties" {
+{abstract} CommandID : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands.WindowGroup"{
Interface "IFromWindowNameResultsProperties" {
+{abstract} v_WindowHandleResult : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "ICanHandleWindowName" {
}
}

package "taskt.Core.Automation.Commands.TextGroup"{
Interface "ITextCheckProperties" {
+{abstract} v_CaseSensitive : String <<get>> <<set>> <<abstract>> 
+{abstract} v_TrimBeforeCheck : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands.WindowGroup"{
Interface "IFromWindowHandleResultsProperties" {
+{abstract} v_WindowNameResult : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "ICheckProperties" {
+{abstract} v_CheckMethod : String <<get>> <<set>> <<abstract>> 
}
}

taskt.Core.Automation.Commands.SetWindowsStateCommand --|> taskt.Core.Automation.Commands.AWindowNamesActionCommnads
taskt.Core.Automation.Commands.SetWindowsStateCommand ..|> taskt.Core.Automation.Commands.IWindowStateProperties
taskt.Core.Automation.Commands.AWindowNamesActionCommnads --|> taskt.Core.Automation.Commands.AWindowNamesCommands
taskt.Core.Automation.Commands.AWindowNamesActionCommnads ..|> taskt.Core.Automation.Commands.IWindowNamesActionProperties
taskt.Core.Automation.Commands.IWindowStateProperties --|> taskt.Core.Automation.Commands.IExpandableProperties
taskt.Core.Automation.Commands.AWindowNamesCommands --|> taskt.Core.Automation.Commands.AWindowNameCoreCommands
taskt.Core.Automation.Commands.AWindowNamesCommands ..|> taskt.Core.Automation.Commands.IWindowNamesProperties
taskt.Core.Automation.Commands.AWindowNamesCommands ..|> taskt.Core.Automation.Commands.ICanHandleList
taskt.Core.Automation.Commands.IWindowNamesActionProperties --|> taskt.Core.Automation.Commands.IWindowNamesProperties
taskt.Core.Automation.Commands.IWindowNamesActionProperties --|> taskt.Core.Automation.Commands.IWindowWaitTimeBetweenFindAndActionProperties
taskt.Core.Automation.Commands.IWindowNamesActionProperties --|> taskt.Core.Automation.Commands.IWindowActivateProperties
taskt.Core.Automation.Commands.AWindowNameCoreCommands --|> taskt.Core.Automation.Commands.ScriptCommand
taskt.Core.Automation.Commands.AWindowNameCoreCommands ..|> taskt.Core.Automation.Commands.IWindowNameCoreProperties
taskt.Core.Automation.Commands.IWindowNamesProperties --|> taskt.Core.Automation.Commands.IWindowNameCoreProperties
taskt.Core.Automation.Commands.ICanHandleList --|> taskt.Core.Automation.Commands.IExpandableProperties
taskt.Core.Automation.Commands.IWindowWaitTimeBetweenFindAndActionProperties --|> taskt.Core.Automation.Commands.IExpandableProperties
taskt.Core.Automation.Commands.ScriptCommand ..|> taskt.Core.Automation.Commands.IUIParameterProperties
taskt.Core.Automation.Commands.ScriptCommand ..|> taskt.Core.Automation.Commands.ICommandIDProperties
taskt.Core.Automation.Commands.IWindowNameCoreProperties --|> taskt.Core.Automation.Commands.WindowGroup.IFromWindowNameResultsProperties
taskt.Core.Automation.Commands.IWindowNameCoreProperties --|> taskt.Core.Automation.Commands.ICanHandleWindowName
taskt.Core.Automation.Commands.IWindowNameCoreProperties --|> taskt.Core.Automation.Commands.TextGroup.ITextCheckProperties
taskt.Core.Automation.Commands.WindowGroup.IFromWindowNameResultsProperties --|> taskt.Core.Automation.Commands.WindowGroup.IFromWindowHandleResultsProperties
taskt.Core.Automation.Commands.ICanHandleWindowName --|> taskt.Core.Automation.Commands.IExpandableProperties
taskt.Core.Automation.Commands.TextGroup.ITextCheckProperties --|> taskt.Core.Automation.Commands.ICheckProperties
taskt.Core.Automation.Commands.WindowGroup.IFromWindowHandleResultsProperties --|> taskt.Core.Automation.Commands.IExpandableProperties
taskt.Core.Automation.Commands.ICheckProperties --|> taskt.Core.Automation.Commands.IExpandableProperties
@enduml